Update controlller names and swagger docs to reflect reality of the project
