# api/swagger.json
@@ -1,49 +1,44 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "Simple Weather API",
-    "description": "API for getting the current weather information.",
+    "title": "Simple API",
+    "description": "API for getting information about subststations in the north of England.",
     "version": "1.0"
   },
-  "produces": ["application/json"],
+  "produces": [
+    "application/json"
+  ],
   "host": "localhost:3000",
   "basePath": "/api",
   "paths": {
-    "/weather": {
+    "/substation": {
       "get": {
-        "x-swagger-router-controller": "Weather",
-        "operationId": "getWeather",
-        "tags": ["/weather"],
-        "description": "Returns the current weather for the requested location using the requested unit.",
+        "x-swagger-router-controller": "Substations",
+        "operationId": "getSubstations",
+        "tags": [
+          "/substations"
+        ],
+        "description": "Returns a list of substations with names matching location.",
         "parameters": [
           {
             "name": "location",
             "in": "query",
-            "description": "The MSN Weather location search string.",
+            "description": "The name of the substation.",
             "required": true,
             "type": "string"
-          },
-          {
-            "name": "unit",
-            "in": "query",
-            "description": "The unit, either 'C' or 'F'.",
-            "required": true,
-            "type": "string",
-            "enum": ["C", "F"],
-            "default": "F"
           }
         ],
         "responses": {
+          "200": {
+            "description": "Successful request.",
+            "schema": {
+              "$ref": "#/definitions/Substation"
+            }
+          },
           "default": {
             "description": "Invalid request.",
             "schema": {
               "$ref": "#/definitions/Error"
-            }
-          },
-          "200": {
-            "description": "Successful request.",
-            "schema": {
-              "$ref": "#/definitions/Weather"
             }
           }
         }
@@ -51,50 +46,39 @@
     }
   },
   "definitions": {
-    "CurrentWeather": {
+    "Substation": {
       "properties": {
-        "temperature": {
+        "Substation Name": {
           "type": "string"
         },
-        "skycode": {
+        "(kV)": {
           "type": "string"
         },
-        "skytext": {
+        "Load(MVA)": {
           "type": "string"
         },
-        "date": {
+        "Generation(MVA)": {
           "type": "string"
         },
-        "observationtime": {
+        "Max(MVA)": {
           "type": "string"
         },
-        "observationpoint": {
+        "Min(MVA)": {
           "type": "string"
         },
-        "feelslike": {
-          "type": "string"
-        },
-        "humidity": {
-          "type": "string"
-        },
-        "winddisplay": {
-          "type": "string"
-        },
-        "day": {
-          "type": "string"
-        },
-        "shortday": {
-          "type": "string"
-        },
-        "windspeed": {
-          "type": "string"
-        },
-        "imageUrl": {
+        "Demandclassification": {
           "type": "string"
         }
-
       },
-      "required": ["temperature", "skycode", "skytext", "date", "observationtime", "observationpoint", "feelslike", "humidity", "winddisplay", "day", "shortday", "windspeed", "imageUrl"]
+      "required": [
+        "Substation Name",
+        "(kV)",
+        "Load(MVA)",
+        "Generation(MVA)",
+        "Max(MVA)",
+        "Min(MVA)",
+        "Demandclassification"
+      ]
     },
     "Error": {
       "properties": {
@@ -102,84 +86,22 @@
           "type": "string"
         }
       },
-      "required": ["message"]
+      "required": [
+        "message"
+      ]
     },
-    "Forecast": {
+    "Response": {
       "properties": {
-        "low": {
-          "type": "string"
-        },
-        "high": {
-          "type": "string"
-        },
-        "skycodeday": {
-          "type": "string"
-        },
-        "skytextday": {
-          "type": "string"
-        },
-        "date": {
-          "type": "string"
-        },
-        "day": {
-          "type": "string"
-        },
-        "shortday": {
-          "type": "string"
-        },
-        "precip": {
-          "type": "string"
-        }
-      },
-      "required": ["low", "high", "skycodeday", "skytextday", "date", "day", "shortday", "precip"]
-    },
-    "Location": {
-      "type": "object",
-      "properties": {
-        "name": {
-          "type": "string"
-        },
-        "zipcode": {
-          "type": "string"
-        },
-        "lat": {
-          "type": "string"
-        },
-        "long": {
-          "type": "string"
-        },
-        "timezone": {
-          "type": "string"
-        },
-        "alert": {
-          "type": "string"
-        },
-        "degreetype": {
-          "type": "string",
-          "enum": ["C", "F"]
-        },
-        "imagerelativeurl": {
-          "type": "string"
-        }
-      },
-      "required": ["name", "lat", "long", "timezone", "degreetype"]
-    },
-    "Weather": {
-      "properties": {
-        "location": {
-          "$ref": "#/definitions/Location"
-        },
-        "current": {
-          "$ref": "#/definitions/CurrentWeather"
-        },
-        "forecast": {
+        "Substations": {
           "type": "array",
           "items": {
-            "$ref": "#/definitions/Forecast"
+            "$ref": "#/definitions/Substation"
           }
         }
       },
-      "required": ["current", "location", "forecast"]
+      "required": [
+        "Substations"
+      ]
     }
   }
 }
