# controllers/Substations.ts
@@ -8,7 +8,7 @@ import * as st from "swagger-tools";
 
 var weather = require('weather-js');
 
-export const getWeather = (req, res, next) => { 
+export const getSubstations = (req, res, next) => { 
       getSubStations(req.swagger.params.location.value).then(data=> {
         res.setHeader('Content-Type', 'application/json');
         res.end(JSON.stringify(data)); 
@@ -20,12 +20,11 @@ export const getWeather = (req, res, next) => {
 
 const getSubStations = (searchString: string ) : Promise<any[]> =>{
   return new Promise((resolve, reject) => {
-    const client = new ioredis("redis")
+    const client = new ioredis('redis')
     let data = [];
-
-    client.scanStream({match : searchString}).on("data", (stream)=> {
+      client.scanStream({match : searchString}).on('data', (stream)=> {
       data = [...data, ...stream]          
-    }).on("end", () => {
+    }).on('end', () => {
       let response = [];
       Promise.each(data, (d)=>{
           return client.hgetall(d).then((results) => {
